test/sema/auto-convert-literals-in-ternary-fail-else.delta
// RUN: %check_errors %not %delta -typecheck %s

uint8 foo(bool b) {
    // CHECK: [[@LINE+1]]:22: error: 1000 is out of range for type 'uint8'
    return b ? 100 : 1000;
}
